--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <a class="navbar-brand">{{pageTitle}}</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link">Home</a>
+      <a [routerLink]="['/welcome']" routerLinkActive="router-link-active"  class="nav-link">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Product List</a>
+      <a [routerLink]="['/products']" routerLinkActive="router-link-active"  class="nav-link">Product List</a>
     </li>
     <li class="nav-item">
       <a class="nav-link">Add Product</a>
@@ -14,14 +14,14 @@
   <ul class="navbar-nav ml-auto">
     <li class="nav-item"
         *ngIf="isLoggedIn">
-      <a class="nav-link">Welcome {{ userName }}</a>
+      <a  class="nav-link">Welcome {{ userName }}</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Show Messages</a>
+      <a [routerLink]="['/routePath']" routerLinkActive="router-link-active"  class="nav-link">Show Messages</a>
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-      <a class="nav-link">Log In</a>
+      <a [routerLink]="['/login']" routerLinkActive="router-link-active"  class="nav-link">Log In</a>
     </li>
     <li class="nav-item"
         *ngIf="isLoggedIn">
@@ -31,5 +31,6 @@
   </ul>
 </nav>
 <div class="container">
-  <pm-home></pm-home>
+  <router-outlet></router-outlet>
+
 </div>
