App routing module

--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -61,7 +61,7 @@
                     [disabled]="!loginForm.valid">
               Log In
             </button>
-            <button class="btn btn-outline-secondary"
+            <button class="btn btn-outline-secondary" [routerLink]="['/welcome']"
                     type="button"
                     style="width:80px">
               Cancel
