--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <a [routerLink]="['/products']" routerLinkActive="router-link-active"  class="nav-link">Product List</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Add Product</a>
+      <a class="nav-link" [routerLink]="['/products', 0, 'edit']">Add Product</a>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
