--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -58,7 +58,7 @@
 
     <div class="row mt-4">
       <div class="col-md-4">
-        <button class="btn btn-outline-secondary mr-3" [routerLink]="['/products']"
+        <button class="btn btn-outline-secondary mr-3" [routerLink]="['/products']" queryParamsHandling="preserve"
                 style="width:80px">
           <i class="fa fa-chevron-left"></i> Back
         </button>
