--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <a class="navbar-brand">{{pageTitle}}</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a [routerLink]="['/welcome']" routerLinkActive="router-link-active"  class="nav-link">Home</a>
+      <a [routerLink]="['/welcome']" routerLinkActive="active"  class="nav-link">Home</a>
     </li>
     <li class="nav-item">
-      <a [routerLink]="['/products']" routerLinkActive="router-link-active"  class="nav-link">Product List</a>
+      <a [routerLink]="['/products']" routerLinkActive="active"  class="nav-link">Product List</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/products', 0, 'edit']">Add Product</a>
@@ -17,11 +17,11 @@
       <a  class="nav-link">Welcome {{ userName }}</a>
     </li>
     <li class="nav-item">
-      <a [routerLink]="['/routePath']" routerLinkActive="router-link-active"  class="nav-link">Show Messages</a>
+      <a [routerLink]="['/routePath']" routerLinkActive="active"  class="nav-link">Show Messages</a>
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-      <a [routerLink]="['/login']" routerLinkActive="router-link-active"  class="nav-link">Log In</a>
+      <a [routerLink]="['/login']" routerLinkActive="active"  class="nav-link">Log In</a>
     </li>
     <li class="nav-item"
         *ngIf="isLoggedIn">
