--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,11 +1,19 @@
 <div class="card">
   <div class="card-header">
-    {{pageTitle}}
+    {{ pageTitle }}
   </div>
 
-  <div class="card-body"
-       *ngIf="product">
-    <form novalidate
+  <div class="card-body" *ngIf="product">
+    <div class="wizard">
+      <a [routerLink]="['info']" routerLinkActive='active'>
+        Info
+      </a>
+      <a [routerLink]="['tags']" routerLinkActive='active'>
+        Tag
+      </a>
+    </div>
+
+    <!-- <form novalidate
           #productForm="ngForm">
 
       <div class="form-group row">
@@ -92,10 +100,35 @@
           </button>
         </div>
       </div>
-    </form>
+    </form> -->
+    <router-outlet></router-outlet>
+    <div class="row">
+      <div class="col-md-4">
+          <button class="btn btn-primary mr-3"
+          style="width:80px"
+          type="button"
+
+          (click)="saveProduct()">
+    Save
+  </button>
+  <button class="btn btn-outline-secondary mr-3"
+          style="width:80px"
+          type="button"
+          title="Cancel your edits"
+          [routerLink]="['/products']">
+    Cancel
+  </button>
+  <button class="btn btn-outline-warning"
+          style="width:80px"
+          type="button"
+          title="Delete this product"
+          (click)="deleteProduct()">
+    Delete
+  </button>
+      </div>
+
+    </div>
   </div>
 </div>
 
-<div class="alert alert-danger"
-     *ngIf="errorMessage">{{errorMessage}}
-</div>
+<div class="alert alert-danger" *ngIf="errorMessage">{{ errorMessage }}</div>
