--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,55 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
-  <a class="navbar-brand">{{pageTitle}}</a>
+  <a class="navbar-brand">{{ pageTitle }}</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a [routerLink]="['/welcome']" routerLinkActive="active"  class="nav-link">Home</a>
+      <a [routerLink]="['/welcome']" routerLinkActive="active" class="nav-link"
+        >Home</a
+      >
     </li>
     <li class="nav-item">
-      <a [routerLink]="['/products']" routerLinkActive="active"  class="nav-link">Product List</a>
+      <a [routerLink]="['/products']" routerLinkActive="active" class="nav-link"
+        >Product List</a
+      >
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/products', 0, 'edit']">Add Product</a>
+      <a class="nav-link" [routerLink]="['/products', 0, 'edit']"
+        >Add Product</a
+      >
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item"
-        *ngIf="isLoggedIn">
-      <a  class="nav-link">Welcome {{ userName }}</a>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link">Welcome {{ userName }}</a>
     </li>
-    <li class="nav-item">
-      <a [routerLink]="['/routePath']" routerLinkActive="active"  class="nav-link">Show Messages</a>
+    <li class="nav-item" *ngIf='!isDisplayed'>
+      <a
+      (click)='showMessage()'
+        class="nav-link"
+        >Show Messages</a>
     </li>
-    <li class="nav-item"
-        *ngIf="!isLoggedIn">
-      <a [routerLink]="['/login']" routerLinkActive="active"  class="nav-link">Log In</a>
+    <li class="nav-item" *ngIf='isDisplayed'>
+        <a
+        (click)='hideMessage()'
+          class="nav-link"
+          >Hide Messages</a>
+      </li>
+    <li class="nav-item" *ngIf="!isLoggedIn">
+      <a [routerLink]="['/login']" routerLinkActive="active" class="nav-link"
+        >Log In</a
+      >
     </li>
-    <li class="nav-item"
-        *ngIf="isLoggedIn">
-      <a class="nav-link"
-         (click)="logOut()">Log Out</a>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link" (click)="logOut()">Log Out</a>
     </li>
   </ul>
 </nav>
 <div class="container">
-  <router-outlet></router-outlet>
-
+  <div class="row">
+      <div class="col-md-10">
+          <router-outlet></router-outlet>
+        </div>
+        <div class="col-md-2">
+          <router-outlet name="popup"></router-outlet>
+        </div>
+  </div>
 </div>
